--- a/src/app/components/content/content.component.html
+++ b/src/app/components/content/content.component.html
@@ -1,67 +1,11 @@
-<div class="d-flex justify-content-between pt-3 flex-wrap">
-    <div class="card ms-5 mt-2" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Product 01</h5>
-          <h6 class="card-subtitle mb-2 text-muted">The first product</h6>
-          <p class="card-text">This is the first product of the brand. Is limited edition</p>
-          <button class="btn btn-primary">Add</button>
-        </div>
-      </div>
-      <div class="card ms-5 mt-2" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Product 02</h5>
-          <h6 class="card-subtitle mb-2 text-muted">The second product</h6>
-          <p class="card-text">This is the second product of the brand. Is limited edition</p>
-          <button class="btn btn-primary">Add</button>
-        </div>
-      </div>
-      <div class="card ms-5 mt-2" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Product 03</h5>
-          <h6 class="card-subtitle mb-2 text-muted">The third product</h6>
-          <p class="card-text">This is the third product of the brand. Is limited edition</p>
-          <button class="btn btn-primary">Add</button>
-        </div>
-      </div>
-      <div class="card ms-5 mt-2" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Product 04</h5>
-          <h6 class="card-subtitle mb-2 text-muted">The 4th product</h6>
-          <p class="card-text">This is the 4th product of the brand. Is limited edition</p>
-          <button class="btn btn-primary">Add</button>
-        </div>
-      </div>
-      <div class="card ms-5 mt-2" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Product 05</h5>
-          <h6 class="card-subtitle mb-2 text-muted">The 5th product</h6>
-          <p class="card-text">This is the 5th product of the brand. Is limited edition</p>
-          <button class="btn btn-primary">Add</button>
-        </div>
-      </div>
-      <div class="card ms-5 mt-2" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Product 06</h5>
-          <h6 class="card-subtitle mb-2 text-muted">The 6th product</h6>
-          <p class="card-text">This is the 6th product of the brand. Is limited edition</p>
-          <button class="btn btn-primary">Add</button>
-        </div>
-      </div>
-      <div class="card ms-5 mt-2" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Product 07</h5>
-          <h6 class="card-subtitle mb-2 text-muted">The 7th product</h6>
-          <p class="card-text">This is the 7th product of the brand. Is limited edition</p>
-          <button class="btn btn-primary">Add</button>
-        </div>
-      </div>
-      <div class="card ms-5 mt-2" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Product 08</h5>
-          <h6 class="card-subtitle mb-2 text-muted">The 8th product</h6>
-          <p class="card-text">This is the 8th product of the brand. Is limited edition</p>
-          <button class="btn btn-primary">Add</button>
-        </div>
-      </div>
-
+<div class="d-flex justify-content-between pt-3 flex-wrap" *ngIf="arrayDeAlumnos.length > 0">
+    <ul>
+        <li *ngFor="let alumno of arrayDeAlumnos">{{alumno | uppercase}}</li>
+    </ul>
+</div>
+<div class="d-flex justify-content-between pt-3 flex-wrap" *ngIf="arrayDeAlumnos.length < 1">
+<p>No hay alumnos</p>
+</div>
+<div [style.background]="arrayDeAlumnos.length > 3 ? 'red' : 'blue'">
+    {{arrayDeAlumnos}}
 </div>
