--- a/src/app/components/content/content.component.html
+++ b/src/app/components/content/content.component.html
@@ -3,7 +3,7 @@
         <li *ngFor="let alumno of arrayDeAlumnos">{{alumno | uppercase}}</li>
     </ul>
 </div>
-<div class="d-flex justify-content-between pt-3 flex-wrap" *ngIf="arrayDeAlumnos.length < 1">
+<div class="d-flex justify-content-between pt-3 flex-wrap" [ngClass]="arrayDeAlumnos.length < 0 ? 'success' : 'error'" *ngIf="arrayDeAlumnos.length < 1">
 <p>No hay alumnos</p>
 </div>
 <div [style.background]="arrayDeAlumnos.length > 3 ? 'red' : 'blue'">
