--- a/src/app/components/content/content.component.html
+++ b/src/app/components/content/content.component.html
@@ -9,3 +9,26 @@
 <div [style.background]="arrayDeAlumnos.length > 3 ? 'red' : 'blue'">
     {{arrayDeAlumnos}}
 </div>
+<div class="d-flex fs-5 mt-5 mb-5 flex-column">
+    <form [formGroup]="formularioEstudiantes" (ngSubmit)="submit()">
+        <div class="mt-2 mb-2">
+            Nombre: <input type="text" formControlName="nombre">
+        </div>
+        <div class="mt-2 mb-2">
+            Email: <input type="text" formControlName="email">
+        </div>
+        <div class="mt-2 mb-2">
+            Comentarios: <textarea type="text" formControlName="comentarios"></textarea>
+        </div>
+        <button type="submit">Confirmar</button>
+    </form>
+</div>
+<div *ngIf="formularioEstudiantes.get('nombre')?.errors?.['required']" [style.background]="'red'">El nombre es obligatorio</div>
+<div *ngIf="formularioEstudiantes.get('nombre')?.errors?.['minlength']" [style.background]="'red'">El nombre debe tener al menos 8 caracteres</div>
+<div *ngIf="formularioEstudiantes.get('email')?.errors?.['required']" [style.background]="'red'">El email es obligatorio</div>
+<div *ngIf="formularioEstudiantes.get('email')?.errors?.['email']" [style.background]="'red'">El campo email debe ser un email valido</div>
+
+<h3>Datos enviados:</h3>
+<p>Nombre: {{formularioEstudiantes.get('nombre')?.value}}</p>
+<p>Email: {{formularioEstudiantes.get('email')?.value}}</p>
+<p>Comentarios: {{formularioEstudiantes.get('comentarios')?.value}}</p>
