--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,6 @@
 <div class="sidebar pt-3 ps-3 fs-5">
     <p>Inicio</p>
-    <p>Tienda</p>
-    <p>Carrito</p>
+    <p>Mi perfil</p>
+    <p>Clases</p>
+    <p>Alumnos</p>
 </div>
